Fixed note heading overflow cutting Ö

--- a/src/css/variables/fonts.css
+++ b/src/css/variables/fonts.css
@@ -7,6 +7,7 @@
   --font-size-xl: 2.2rem;
   --font-line-height-s: 1rem;
   --font-line-height-default: 1.25rem;
+  --font-line-height-medium: 1.5rem;
   --font-line-height-l: 2rem;
   --font-weight-default: 400;
   --font-weight-bold: 600;
